Proper pin header show in contact maps, articlecontroller and articleservice cleaned